--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+html, body {
+  background-color: #121212;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+textarea {
+  height: 100px;
+  resize: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h2 {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.app {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  margin: 40px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.app-surface {
+  background-color: #212121;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 15px;
+  padding: 20px 30px;
+  border-radius: 10px;
+  width: 60%;
+  max-width: 800px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.button {
+  margin-top: 10px;
+  background-color: #ff0266;
+  color: #fff;
+  font-size: 15px;
+  border: none;
+  border-style: unset;
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+.button:hover {
+  cursor: pointer;
+  background-color: #ff7597;
+}
+
+.row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.bold {
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+.paragraph {
+  margin: 30px;
+  margin-top: 65px;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.list {
+  margin: 10px 30px;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.info-icon {
+  color: #ff0266;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+}
+.info-icon:hover {
+  cursor: pointer;
+  color: #ff7597;
+}
+
+.nav-menu {
+  position: fixed;
+  margin: 0;
+  height: 100vh;
+  width: 300px;
+  background-color: #222222;
+  z-index: 1;
+  right: 0;
+  top: 0;
+}
+
+.nav-menu-blur {
+  position: fixed;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.37);
+  left: 0;
+  top: 0;
+}
+
+@media screen and (max-width: 500px) {  
+  .row {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  .app-surface {
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .nav-menu {
+    width: 70vw;
   }
 }
